fixed the comment area on mobile and brightened up the website again

--- a/components/Comment/Comment.module.scss
+++ b/components/Comment/Comment.module.scss
@@ -54,6 +54,12 @@
   border-left: 0.2vw solid var(--light-gray);
   opacity: 0.7;
   background-color: rgba(0, 0, 0, 0.35);
+
+  @media only screen and (max-width: 425px) {
+    margin-left: 3vw;
+    padding-left: 2vw;
+    border-left: 0.7vw solid var(--light-gray);
+  }
 }
 
 .comment > div > p > li {
@@ -65,6 +71,10 @@
   b {
     width: 10vw;
     margin-right: 0.6vw;
+  }
+
+  @media only screen and (max-width: 425px) {
+    margin-left: 3vw;
   }
 }
 
