--- a/components/feedbackAndShare/CommentArea/CommentArea.module.scss
+++ b/components/feedbackAndShare/CommentArea/CommentArea.module.scss
@@ -17,14 +17,20 @@
   overflow-x: hidden;
 
   @media only screen and (max-width: 425px) {
+    width: 89vw;
     height: 20vw !important;
     font-size: 4vw;
+    padding: 3vw;
   }
 }
 
 #commentAreaView::-webkit-scrollbar {
   width: 0.5vw;
   background: var(--light-gray);
+
+  @media only screen and (max-width: 425px) {
+    width: 1.5vw;
+  }
 }
 
 #commentAreaView::-webkit-scrollbar-track {
@@ -61,10 +67,20 @@
   padding-left: 0.6vw;
   opacity: 0.7;
   z-index: -1;
+
+  @media only screen and (max-width: 425px) {
+    margin-left: 3vw;
+    padding-left: 2vw;
+    border-left: 0.7vw solid var(--light-gray);
+  }
 }
 
 #commentAreaView > div > span > .listItem {
   margin-left: 0.8vw;
+
+  @media only screen and (max-width: 425px) {
+    margin-left: 3vw;
+  }
 }
 
 #commentLoading {
@@ -76,6 +92,10 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
+
+  @media only screen and (max-width: 425px) {
+    height: 26vw;
+  }
 }
 
 #commentLoading > img {
@@ -143,6 +163,20 @@
     height: 6vw;
     min-width: 8vw;
     font-size: 5vw;
+
+    &:hover:not(:disabled) {
+      height: 7.5vw;
+      margin-top: -1.5vw;
+      border-top: 1vw solid var(--article-colour);
+    }
+  
+    &:active:not(:disabled) {
+      height: 6vw;
+      margin-top: 0;
+      border-top: 0.5vw solid var(--article-colour);
+      color: var(--article-colour);
+      background-color: var(--primary-text);
+    }
   }
 
   svg {
@@ -207,7 +241,19 @@
   }
 
   @media only screen and (max-width: 425px) {
-    width: 25%;
+    height: 6vw !important;
+    padding-left: 15vw !important;
+    font-size: 4vw !important;
+    background-image: linear-gradient(
+    45deg,
+    transparent 13%,
+    transparent 17%,
+    var(--secondary-colour) 17%,
+    var(--secondary-colour) 21%,
+    transparent 21%,
+    transparent 25%,
+    var(--secondary-colour) 25%
+  );
   }
 }
 
